welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: not found: value avancer
  	avancer()
        ^Runner:7: error: not found: value avancer
  	avancer()
        ^